// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupPage renders 1`] = `
<DocumentFragment>
  <header>
    <a
      class="main-container main-container--content flex focus:outline-none focus:ring-2 focus:ring-red-600"
      href="/"
    >
      <picture>
        <source
          media="(min-width: 640px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
        />
        <source
          media="(min-width: 480px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
        />
        <img
          alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
          src="/icons/app/icons8-dungeons-and-dragons-64.png"
        />
      </picture>
      <div
        class="font-serif text-2xl sm:text-3xl md:text-4xl self-center antialiased"
      >
        [Translation for https://example.com/global/translations.ttl#appName does not exist]
      </div>
    </a>
  </header>
  <main
    class="main-container main-container--content my-1"
  >
    <div
      class="content leading-normal max-w-prose mx-auto"
    >
      <h1>
        [Translation for https://example.com/global/translations.ttl#signupTitle does not exist]
      </h1>
      <p>
        [Translation for https://example.com/global/translations.ttl#signupPitch does not exist]
      </p>
    </div>
    <ul
      class="flex flex-wrap justify-center my-8"
    >
      <li
        class="text-center m-2"
      >
        <a
          class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300"
          href="https://signup.pod.inrupt.com/"
        >
          <img
            alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
            class="mx-auto max-h-20"
            src="/logos/inrupt-ps-logo.png"
          />
          <span
            class="text-xl font-bold"
          >
            Inrupt Pod Spaces
          </span>
        </a>
      </li>
      <li
        class="text-center m-2"
      >
        <a
          class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300"
          href="https://solidcommunity.net/register"
        >
          <img
            alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
            class="mx-auto max-h-20"
            src="/logos/solid-emblem.svg"
          />
          <span
            class="text-xl font-bold"
          >
            solidcommunity.net
          </span>
        </a>
      </li>
      <li
        class="text-center m-2"
      >
        <a
          class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300"
          href="https://inrupt.net/register"
        >
          <img
            alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
            class="mx-auto max-h-20"
            src="/logos/solid-emblem.svg"
          />
          <span
            class="text-xl font-bold"
          >
            inrupt.net
          </span>
        </a>
      </li>
    </ul>
    <div
      class="content leading-normal max-w-prose mx-auto"
    >
      <p
        class="text-center"
      >
        <a
          href="/login"
        >
          [Translation for https://example.com/global/translations.ttl#logInPrompt does not exist]
        </a>
      </p>
    </div>
    <aside
      class="my-16"
    >
      <div
        class="content leading-normal max-w-prose mx-auto content content--small"
      >
        <h2
          data-testid="faq-label"
        >
          [Translation for https://example.com/#faqLabel does not exist]
        </h2>
        <div
          data-testid="faq-description"
        >
          <p>
            [Translation for https://example.com/#faqDescription does not exist]
          </p>
        </div>
      </div>
      <div
        class="content leading-normal max-w-prose mx-auto content content--small"
      >
        <h2
          data-testid="faq-label"
        >
          [Translation for https://example.com/#faqLabel does not exist]
        </h2>
        <div
          data-testid="faq-description"
        >
          <p>
            [Translation for https://example.com/#faqDescription does not exist]
          </p>
        </div>
      </div>
    </aside>
  </main>
  <footer
    class="main-container main-container--content mt-2 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
  >
    <div
      class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
    >
      <a
        class="link"
        href="/about"
      >
        [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
      </a>
      <a
        class="link"
        href="/faq"
      >
        [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
      </a>
    </div>
    <div
      class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
    >
      <button
        class="button"
        data-testid="dark-mode-selector-button"
        type="button"
      >
        <span>
          <span
            class="text-black text-opacity-30"
          >
            💡
          </span>
           [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
        </span>
      </button>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`SignupPage renders a warning when authenticated 1`] = `
<DocumentFragment>
  <header>
    <a
      class="main-container main-container--content flex focus:outline-none focus:ring-2 focus:ring-red-600"
      href="/"
    >
      <picture>
        <source
          media="(min-width: 640px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-128.png"
        />
        <source
          media="(min-width: 480px)"
          srcset="/icons/app/icons8-dungeons-and-dragons-96.png"
        />
        <img
          alt="[Translation for https://example.com/global/translations.ttl#appLogoDescription does not exist]"
          src="/icons/app/icons8-dungeons-and-dragons-64.png"
        />
      </picture>
      <div
        class="font-serif text-2xl sm:text-3xl md:text-4xl self-center antialiased"
      >
        [Translation for https://example.com/global/translations.ttl#appName does not exist]
      </div>
    </a>
  </header>
  <main
    class="main-container main-container--content my-1"
  >
    <div
      class="content leading-normal max-w-prose mx-auto"
    >
      <h1>
        [Translation for https://example.com/global/translations.ttl#signupTitle does not exist]
      </h1>
      <div
        data-testid="logged-in-already-warning"
      >
        <div
          class="bg-yellow-200 text-yellow-900 border-yellow-400 border px-2 py-1 rounded-sm mb-2"
        >
          [Translation for https://example.com/global/translations.ttl#LoggedInAlready does not exist]
        </div>
      </div>
      <p>
        [Translation for https://example.com/global/translations.ttl#signupPitch does not exist]
      </p>
    </div>
    <ul
      class="flex flex-wrap justify-center my-8"
    >
      <li
        class="text-center m-2"
      >
        <a
          class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300"
          href="https://signup.pod.inrupt.com/"
        >
          <img
            alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
            class="mx-auto max-h-20"
            src="/logos/inrupt-ps-logo.png"
          />
          <span
            class="text-xl font-bold"
          >
            Inrupt Pod Spaces
          </span>
        </a>
      </li>
      <li
        class="text-center m-2"
      >
        <a
          class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300"
          href="https://solidcommunity.net/register"
        >
          <img
            alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
            class="mx-auto max-h-20"
            src="/logos/solid-emblem.svg"
          />
          <span
            class="text-xl font-bold"
          >
            solidcommunity.net
          </span>
        </a>
      </li>
      <li
        class="text-center m-2"
      >
        <a
          class="block bg-purple-100 p-4 rounded-xl focus:outline-none focus:ring-2 focus:ring-purple-600 hover:shadow-inner hover:bg-purple-300"
          href="https://inrupt.net/register"
        >
          <img
            alt="[Translation for https://example.com/global/translations.ttl#serviceLogo does not exist]"
            class="mx-auto max-h-20"
            src="/logos/solid-emblem.svg"
          />
          <span
            class="text-xl font-bold"
          >
            inrupt.net
          </span>
        </a>
      </li>
    </ul>
    <div
      class="content leading-normal max-w-prose mx-auto"
    >
      <p
        class="text-center"
      >
        <a
          href="/login"
        >
          [Translation for https://example.com/global/translations.ttl#logInPrompt does not exist]
        </a>
      </p>
    </div>
    <aside
      class="my-16"
    >
      <div
        class="content leading-normal max-w-prose mx-auto content content--small"
      >
        <h2
          data-testid="faq-label"
        >
          [Translation for https://example.com/#faqLabel does not exist]
        </h2>
        <div
          data-testid="faq-description"
        >
          <p>
            [Translation for https://example.com/#faqDescription does not exist]
          </p>
        </div>
      </div>
      <div
        class="content leading-normal max-w-prose mx-auto content content--small"
      >
        <h2
          data-testid="faq-label"
        >
          [Translation for https://example.com/#faqLabel does not exist]
        </h2>
        <div
          data-testid="faq-description"
        >
          <p>
            [Translation for https://example.com/#faqDescription does not exist]
          </p>
        </div>
      </div>
    </aside>
  </main>
  <footer
    class="main-container main-container--content mt-2 text-center sm:text-left xs:flex xs:space-x-4 items-center justify-center sm:justify-start"
  >
    <div
      class="md:flex-grow pb-2 flex space-x-1 justify-center sm:justify-start"
    >
      <a
        class="link"
        href="/about"
      >
        [Translation for https://example.com/global/translations.ttl#aboutTitle does not exist]
      </a>
      <a
        class="link"
        href="/faq"
      >
        [Translation for https://example.com/global/translations.ttl#faqShort does not exist]
      </a>
    </div>
    <div
      class="pb-2 flex xs:space-x-2 space-y-2 xs:space-y-0 flex-col text-center xs:flex-row xs:justify-center"
    >
      <button
        class="button"
        data-testid="dark-mode-selector-button"
        type="button"
      >
        <span>
          <span
            class="text-black text-opacity-30"
          >
            💡
          </span>
           [Translation for https://example.com/global/translations.ttl#darkModeTurnOn does not exist]
        </span>
      </button>
    </div>
  </footer>
</DocumentFragment>
`;
